# autonomous-vessel-navigation

./: .gitignore  README.md  main.py  pyproject.toml
examples/: astar_demo.py  basic_grid_demo.py  dynamic_obstacles_demo.py  integrated_navigation_demo.py  navigation_with_collision_avoidance.py  navigation_with_collision_detection.py  path_following_demo.py  test_setup.py  test_threshold.py
src/environment/: collision_detection.py  dynamic_obstacles.py  grid_world.py
src/pathfinding/: astar.py
src/rl/: __init__.py  rl_environment.py
src/vessel/: collision_avoidance.py  path_follower.py  vessel_model.py
src/visualization/: astar_animator.py  dynamic_animator.py  integrated_animator.py  path_animator.py  plotter.py  vessel_animator.py
