[project]
name = "autonomous-vessel-navigation"
version = "0.1.0"
description = "Comparative study of classical and RL approaches to autonomous maritime navigation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "pygame>=2.6.1",
    "gymnasium>=1.2.2",
]

[project.optional-dependencies]
rl = [
    "stable-baselines3>=2.7.0",
    "tensorboard>=2.20.0",
]
